--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "V2Ray",
+    "name": "gggf007-vtest",
     "description": "Deploy V2ray on Heroku.",
     "keywords": [
         "V2Ray"
